# pokecounter

./: .bumpversion.cfg  .coveragerc  .gitignore  .pre-commit-config.yaml  PokeCounter.spec  pyproject.toml  sonar-project.properties
.github/workflows/: main.yaml  non-main.yaml
pokecounter/: __main__.py  config.py  pokedex.py  ui.py
tests/: test_pokecounter.py
