[tool.poetry]
name = "pokecounter"
version = "0.1.0"
description = "A simple, configurable counter for soft resets when shiny hunting."
authors = ["Dakota Brown <dakota.kae.brown@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
PySimpleGUI = "^4.60.1"
Flask = ">=2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.19.0"
black = "^22.3.0"
pytest-cov = "^3.0.0"
bump2version = "^1.0.1"
pyinstaller = "^5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
